fix: 🐛 修正追蹤相關功能
